src/objects/ServiceAssignment_ServiceCode_JO__c.object
<CustomObject>
    <description>Notes - joins a service assignment to a code</description>
    <fields>
        <fullName>Code_Selection_txt__c</fullName>
        <description>used in queries to provide a method for changing the txt displayed in selection processes of visualforce pages.</description>
        <formula>Service_Code__r.Service_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Selection txt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>ServiceAssignment Service Code JOs</relationshipLabel>
        <relationshipName>ServiceAssignment_Service_Code_JOs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>ServiceAssignment Service Code JOs</relationshipLabel>
        <relationshipName>ServiceAssignment_Service_Code_JOs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>ServiceAssignment Service Code JO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Assignment__c</columns>
        <columns>Service_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ServiceAssignment Service Code JO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceAssignment Service Code JOs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>